fix css for dark mode

--- a/server/assets/static/main.css
+++ b/server/assets/static/main.css
@@ -22,6 +22,7 @@ span,
 html {
   font-family: monospace;
   font-size: var(--size);
+  color: black;
 }
 
 body {
@@ -84,6 +85,10 @@ table td.text-trunc {
   text-overflow: ellipsis;
   overflow: hidden;
   max-width: 0;
+}
+
+p {
+  color: inherit;
 }
 
 a,
